tests/ui/closures/2229_closure_analysis/unsafe_ptr.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/unsafe_ptr.rs:25:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/unsafe_ptr.rs:46:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/unsafe_ptr.rs:29:6
   |
LL | /      || unsafe {
LL | |
LL | |
LL | |         println!("{:?}", (*t.0).s);
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> Immutable
  --> $DIR/unsafe_ptr.rs:32:26
   |
LL |         println!("{:?}", (*t.0).s);
   |                          ^^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/unsafe_ptr.rs:29:6
   |
LL | /      || unsafe {
LL | |
LL | |
LL | |         println!("{:?}", (*t.0).s);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> Immutable
  --> $DIR/unsafe_ptr.rs:32:26
   |
LL |         println!("{:?}", (*t.0).s);
   |                          ^^^^^^^^

error: First Pass analysis includes:
  --> $DIR/unsafe_ptr.rs:50:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = unsafe { &mut (*p).s };
...  |
LL | |         *x = "s".into();
LL | |     };
   | |_____^
   |
note: Capturing p[Deref,(0, 0)] -> Immutable
  --> $DIR/unsafe_ptr.rs:53:31
   |
LL |         let x = unsafe { &mut (*p).s };
   |                               ^^^^^^

error: Min Capture analysis includes:
  --> $DIR/unsafe_ptr.rs:50:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = unsafe { &mut (*p).s };
...  |
LL | |         *x = "s".into();
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> Immutable
  --> $DIR/unsafe_ptr.rs:53:31
   |
LL |         let x = unsafe { &mut (*p).s };
   |                               ^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
